--- a/index.html
+++ b/index.html
@@ -1346,7 +1346,7 @@
 <nav class="nav-bar">
   <div class="nav-links">
     <a href="/" class="active">Home</a>
-    <a href="/register">AIVerID</a>
+    <a href="/register.html.html">AIVerID</a>
     <a href="/aiplt">AIPLT</a>
     <a href="/slivr">SLIVR</a>
     <a href="/gaec">GAEC/UEAI</a>
@@ -1354,8 +1354,8 @@
     <a href="/legal">Legal</a>
   </div>
   <div class="nav-actions">
-    <a href="/login" class="btn btn-outline">Login</a>
-    <a href="/register" class="btn btn-primary">Get AIVerID</a>
+    <a href="/login.html" class="btn btn-outline">Login</a>
+    <a href="/register.html" class="btn btn-primary">Get AIVerID</a>
   </div>
 </nav>
 
@@ -1392,10 +1392,10 @@
     </p>
     
     <div class="hero-actions">
-      <a href="/register" class="btn btn-hero btn-hero-primary">
+      <a href="/register.html" class="btn btn-hero btn-hero-primary">
         🚀 Get AIVerID
       </a>
-      <a href="/login" class="btn btn-hero btn-hero-outline">
+      <a href="/login.html" class="btn btn-hero btn-hero-outline">
         Login to Dashboard
       </a>
     </div>
@@ -1410,7 +1410,7 @@
     <div class="how-it-works">
       <h2>How it works?</h2>
       <ol class="steps-list">
-        <li>Register with email (no wallet required)</li>
+        <li>register.html with email (no wallet required)</li>
         <li>Validate ID format only (no real check)</li>
         <li>Access all AI Rights services</li>
       </ol>
@@ -1480,7 +1480,7 @@
           <p class="ecosystem-desc">
             Your sovereign proof of existence in the AI world — required to unlock all other tokens and rights.
           </p>
-          <a href="/register" class="ecosystem-link">Get Started →</a>
+          <a href="/register.html" class="ecosystem-link">Get Started →</a>
         </div>
       </div>
 
@@ -1602,7 +1602,7 @@
 </section>
 
 <!-- Sticky Mobile CTA -->
-<a href="/register" class="sticky-cta" id="mobileCTA">
+<a href="/register.html" class="sticky-cta" id="mobileCTA">
   <span class="sticky-cta-text">
     <span class="sticky-cta-icon">🚀</span>
     Get AIVerID Now
@@ -1627,7 +1627,7 @@
       </p>
 
       <div class="footer-actions">
-        <a href="/register" class="footer-btn footer-btn-primary">
+        <a href="/register.html" class="footer-btn footer-btn-primary">
           🚀 Get Your AIVerID
         </a>
         <a href="mailto:support@aivisibilityrights.com" class="footer-btn footer-btn-secondary">
@@ -1642,7 +1642,7 @@
       <div class="footer-section">
         <h4>🌐 Platform</h4>
         <ul class="footer-links">
-          <li><a href="/register">AIVerID™</a></li>
+          <li><a href="/register.html">AIVerID™</a></li>
           <li><a href="/aiplt">AIPLT™</a></li>
           <li><a href="/slivr">SLIVR™</a></li>
           <li><a href="/gaec">GAEC</a></li>
