--- a/oauth-demo.html
+++ b/oauth-demo.html
@@ -487,12 +487,12 @@
 <body>
     <header>
         <nav>
-            <a href="/" class="logo">AIVerID™</a>
+            <a href="/index.html" class="logo">AIVerID™</a>
             <ul class="nav-links">
-                <li><a href="/">Home</a></li>
-                <li><a href="/register">Register</a></li>
-                <li><a href="/login">Login</a></li>
-                <li><a href="/dashboard">Dashboard</a></li>
+                <li><a href="/index.html">Home</a></li>
+                <li><a href="/register.html">Register</a></li>
+                <li><a href="/login.html">Login</a></li>
+                <li><a href="/dashboard.html">Dashboard</a></li>
             </ul>
         </nav>
     </header>
