--- a/register.html
+++ b/register.html
@@ -398,7 +398,7 @@
             <a href="/" class="logo">AIVerID™</a>
             <ul class="nav-links">
                 <li><a href="/">Home</a></li>
-                <li><a href="/login">Login</a></li>
+                <li><a href="/login.html">Login</a></li>
                 <li><a href="/oauth-demo">OAuth Demo</a></li>
             </ul>
         </nav>
@@ -500,7 +500,7 @@
                 </form>
 
                 <div class="login-link">
-                    <p>Already have an account? <a href="/login">Sign in here</a></p>
+                    <p>Already have an account? <a href="/login.html">Sign in here</a></p>
                 </div>
             </div>
         </div>
