--- a/index.html
+++ b/index.html
@@ -1346,7 +1346,7 @@
 <nav class="nav-bar">
   <div class="nav-links">
     <a href="/" class="active">Home</a>
-    <a href="/register.html.html">AIVerID</a>
+    <a href="/register.html">AIVerID</a>
     <a href="/aiplt">AIPLT</a>
     <a href="/slivr">SLIVR</a>
     <a href="/gaec">GAEC/UEAI</a>
