--- a/login.html
+++ b/login.html
@@ -485,7 +485,7 @@
             <a href="/" class="logo">AIVerID™</a>
             <ul class="nav-links">
                 <li><a href="/">Home</a></li>
-                <li><a href="/register">Register</a></li>
+                <li><a href="/register.html">Register</a></li>
                 <li><a href="/oauth-demo">OAuth Demo</a></li>
             </ul>
         </nav>
@@ -566,7 +566,7 @@
                 </div>
 
                 <div class="register-link">
-                    <p>Don't have an account? <a href="/register">Create your AIVerID</a></p>
+                    <p>Don't have an account? <a href="/register.html">Create your AIVerID</a></p>
                 </div>
             </div>
         </div>
