--- a/login.html
+++ b/login.html
@@ -834,7 +834,7 @@
         } else {
           // Regular login - redirect to dashboard
           setTimeout(() => {
-            window.location.href = '/dashboard';
+            window.location.href = '/dashboard.html';
           }, 1000);
         }
 
